Added desktop measurements

--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,51 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-.content-wrapper{
+@media only screen and (min-width:1200px) {
+  .content-wrapper {
+    max-width: 960px;
+  }
+
+  .hero-area h1 {
+    width: 60%;
+  }
+
+  aside .content-wrapper {
+    justify-content: space-around;
+  }
+
+  aside .content-wrapper .form-description, aside .content-wrapper .form {
+    width: 30%;
+  }
+
+  .features h2 {
+    width: 90%;
+  }
+
+  .features article {
+    flex-basis: 33%;
+  }
+
+  .reviews article div {
+    width: 42%;
+  }
+
+  /* ABOUT PAGE */
+  .mission h2, .content-section .content-wrapper h2 {
+    width: 95%;
+  }
+  
+
+  /* FAQ PAGE */
+  .faq h2 {
+    width: 100%;
+  }
+}
+
+
+
+
+   .content-wrapper{
   width: 90%;
   margin: 50px 0;
 }
